# HIOT

./: Dockerfile  README.md  docker-compose.yml  hiot-stack.dev.yml  hiot-stack.yml  requirements.txt
api/: API.py  Dockerfile  ENV.py  app.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  session.py
api/api/: ENV.py  app.py  database.py  models.py  schemas.py
app/: API.py  Dockerfile  app.py  main.py  models.py  monitor_integration.py  requirements.txt  scheduler.py  schemas.py  session.py  telegram_notifier.py
tbd/: scheduler.py  telegram_notifier.py
telegram_responder/: ENV.py  main.py  requirements.txt  state_checker.py  telegram_handler.py
