[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "matplotlib==3.10.3",
    "psycopg2-binary>=2.9.1",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "python-telegram-bot==22.0",
    "sqlalchemy>=1.4.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.15.0",
]
